# fastabx_local

./: .clang-format  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: docs.yaml  release.yml  togitlab.yml
docs/: Makefile  abx.rst  api.rst  conf.py  guide.rst  index.rst  install.rst  slicing.rst
docs/advanced/: comparison.rst  index.rst  slicing.rst
docs/examples/: external.rst  gaussians.ipynb  index.rst  spiritlm.rst
mlp_src/fastabx/: score.py
packaging/: setup_cuda.ps1
scripts/: __init__.py  check_empty_feature.py  check_features_and_item.py  convert_features.py  exec.sh  read_reorg_codec.py  rename_features.py  reorg_accenterror_df.py  reorg_features.py  rewrite_item.py  run_reorg.sh  run_reorg_features.sh  run_vctk_codec_abx.sh  save_json.py  test_fine_file.py  vctk_abx_accent.py  vctk_codec_abx.py  vctk_hubert_abx.py  write_item_vctk.py  write_items_cmul2.py  write_items_vctk.py
scripts/results/: repcodec_hubert_large_l18_ls100_accent_framemean.txt  repcodec_hubert_large_l18_ls100_merge0.2vctk_accent_framemean.txt  repcodec_hubert_large_l18_ls100_merge0.2vctk_phone_framemean.txt  repcodec_hubert_large_l18_ls100_merge0.5vctk_accent_framemean.txt  repcodec_hubert_large_l18_ls100_merge0.5vctk_phone_framemean.txt  repcodec_hubert_large_l18_ls100_merge1.0vctk_accent_framemean.txt  repcodec_hubert_large_l18_ls100_merge1.0vctk_phone_framemean.txt  repcodec_hubert_large_l18_ls100_phone_framemean.txt  repcodec_hubert_large_l18_ls100_released_accent_framemean.txt  repcodec_hubert_large_l18_ls100_released_phone_framemean.txt
src/fastabx/: __init__.py  __main__.py  cell.py  dataset.py  distance.py  dtw.py  pooling.py  score.py  subsample.py  task.py  torch_version.json  utils.py  verify.py  zerospeech.py
src/fastabx/csrc/: dtw.cpp
src/fastabx/csrc/cuda/: dtw.cu
tests/: benchmark.py  conftest.py  test_distances.py  test_dtw.py  test_opcheck.py  test_zerospeech.py
utils/: dataset_mod.py  task_mod.py
