[build-system]
requires = [
    "setuptools>=75.0.0",
    "setuptools-scm>=8.1.0",
    "torch>=2.6.0",
    "numpy>=2.0.2",
    "ninja>=1.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastabx"
version = "0.1.0"
description = "Fast ABX"
readme = "README.md"
requires-python = ">=3.12"
authors = [ {name = "Maxime Poli"} ]
license = "MIT"
dependencies = [
    "numpy>=2.1.3",
    "polars>=1.14.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
gpu = [
    "polars[gpu]>=1.14.0",
]

[project.scripts]
fastabx = "fastabx.__main__:main"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.1",
    "types-tqdm>=4.67.0.20241221",
    "typos>=1.29.4",
]
test = [
    "hypothesis>=6.125.1",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D105",   # undocumented-magic-method
    "D107",   # undocumented-public-init
    "EM101",  # raw-string-in-exception
    "PD901",  # pandas-df-variable-name
    "TRY003", # raise-vanilla-args
]
