[build-system]
requires = [
    "setuptools>=75.0.0,<=75.8.2", # Temporary upper bound: https://github.com/pytorch/pytorch/issues/148877
    "setuptools-scm>=8.1.0",
    "torch==2.6.0",
    "numpy>=2.0.2",
    "ninja>=1.11",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastabx"
version = "0.1.6"
description = "Fast ABX"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Maxime Poli" }]
license = { text = "MIT" } # To update to PEP 639 once support is added to setuptools
keywords = ["speech", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "cudf-polars-cu12>=24.12.0; sys_platform == 'linux'",
    "numpy>=2.1.3",
    "polars>=1.14.0",
    "torch==2.6.0",
    "tqdm>=4.67.1",
]

[project.urls]
homepage = "https://docs.cognitive-ml.fr/fastabx"
documentation = "https://docs.cognitive-ml.fr/fastabx"
repository = "https://github.com/bootphon/fastabx"
changelog = "https://github.com/bootphon/fastabx/releases"

[project.scripts]
fastabx = "fastabx.__main__:main"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "ruff>=0.9.1",
    "types-setuptools>=75.8.0.20250210",
    "types-tqdm>=4.67.0.20241221",
    "typos>=1.29.4",
]
test = ["hypothesis>=6.125.1", "pytest>=8.3.4"]
doc = [
    "furo>=2024.8.6",
    "matplotlib>=3.10.0",
    "nbconvert>=7.16.6",
    "nbsphinx>=0.9.6",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D105",   # undocumented-magic-method
    "D107",   # undocumented-public-init
    "D203",   # incorrect-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "PD901",  # pandas-df-variable-name
]

[tool.ruff.lint.flake8-self]
ignore-names = ["_check"]

[tool.setuptools]
license-files = [] # https://github.com/pypa/setuptools/issues/4759
